# gdelt-client

./: LICENSE  README.md  pyproject.toml  renovate.json
.github/: FUNDING.yml
.github/workflows/: lint.yml  publish.yml  test.yml  validate-codecov-config.yml
src/gdelt_client/: __init__.py  api_client.py  enums.py  errors.py  filters.py  helpers.py  validation.py
src/gdelt_client/data/schemas/: cameoCodes.json  eventsv2.json  gkgv2.json  mentions.json
tests/: test_client.py  test_enums.py  test_errors.py  test_filters.py  test_helpers.py  test_validation.py
