[project]
name = "gdelt-client"
version = "0.1.0"
description="A client for the GDELT 2.0 API"
readme = "README.md"
authors = [
    { name = "Bob Merkus", email = "bob.merkus@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "geopandas>=1.1.2",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "tenacity>=9.1.3",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "types-geopandas>=1.1.2.20260120",
    "types-python-dateutil>=2.9.0.20260124",
    "types-requests>=2.32.4.20260107",
    "types-shapely>=2.1.0.20250917",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: mark a test as an integration test",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
